--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 <html lang="en" class="cover">
 <head>
 	<meta charset="utf-8">
-	<title>Donations - Political HTML Template - FrontRunner</title>
+	<title>Donations - Heidi Carter for County Commission</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
@@ -21,7 +21,7 @@
 	<div id="header">
 		<!-- Cover element
 		================================================== -->
-		<div class="cover-wrapper" style="background-image: url(assets/images/full-screen-bg-1.jpg)">
+		<div class="cover-wrapper" style="background-image: url(assets/images/donatebackgroundshadow.jpg)">
 			<div class="cover-container"> <!-- add class 'overlay' for inner shadow -->
 				<div class="cover-inner">
 					<div id="donation" class="cover-left-content">
@@ -31,13 +31,13 @@
 
 									<div class="logo text-left">
 										<a href="index.html">
-											<img src="assets/images/logo-sm.png" width="280" height="60" alt="FrontRunner">
+											<img src="assets/images/logo.png" width="480" height="60" alt="FrontRunner">
 										</a>
 									</div>
 
 									<div class="intro-wrap">
-										<h1 class="text-left">It Starts Today!</h1>
-										<p class="text-left">Help us build a better tomorrow.</p>
+										<h1 class="text-left">Support Heidi's Campaign!</h1>
+										<p class="text-left"></p>
 									</div>
 
 									<div class="box-wrapper">
@@ -50,7 +50,7 @@
 									</div> <!-- end donate-wrapper -->
 
 									<div class="continue-link">
-										<a href="index.html">Continue to the site &nbsp; <i class="fa fa-arrow-circle-right"></i></a>
+										<a href="index.html" style="color: #fff;">Continue to the site &nbsp; <i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 
 								</div>
