--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<title>Contact - Heidi Carter for County Commission</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
+	<link rel="stylesheet" href="assets/css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="assets/css/heidi.css" media="screen">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -21,7 +21,7 @@
 		<!-- main navigation -->
 		<div class="header-inner menu-container">
 			<div class="navbar-wrapper">
-				<nav class="navbar navbar-default navbar-static-top navbar-sticky" id="nav-main">
+				<nav class="navbar navbar-default navbar-fixed-top" id="nav-main">
 					<div class="container-fluid">
 
 						<div class="navbar-header">
@@ -96,11 +96,11 @@
 							<input type="email" class="form-control" id="email_address" name="_replyto" placeholder="Email">
 						</div>
 						<input type="hidden" name="_subject" value="Contact" />
-						<input type="hidden" name="_next" value="//heidicarter.com/thanks.html" 
+						<input type="hidden" name="_next" value="//heidicarter.com/thanks.html"> 
 						<div class="form-group">
 							<label for="comments" class="hidden">Comments</label>
 							<textarea name="comments" id="comments" class="form-control" rows="10" placeholder="Comments"></textarea>
-						</div>
+						</div><br>
 						<button type="submit" value="SEND" class="btn btn-default">Send</button>
 					</form> <!-- contact-form -->
 
@@ -116,7 +116,7 @@
 
 						<h5><em>Get involved and help the campaign!</em></h5>
 						<p>We need your support to take this campaign to the next level and win. See how you can help.</p>
-						<a href="" class="small">Find out more</a>
+						<a href="/volunteer.html" class="small">Find out more</a>
 					</aside>
 
 					<aside class="widget">
@@ -124,25 +124,9 @@
 
 						<h5><em>Help us fund the effort.</em></h5>
 						<p>Your contributions are what make all this possible. Every donation helps so don't wait!</p>
-						<a href="" class="small">Donate Now!</a>
+						<a href="/donate.html" class="small">Donate Now!</a>
 					</aside>
 
-					<aside class="widget">
-						<h3 class="heading">WE'RE HIRING!</h3>
-
-						<h5><em>Job openings and internships.</em></h5>
-						<p>Apply for a job with the campaign or in one of our local offices or the internship program.</p>
-						<a href="" class="small">Apply Here</a>
-					</aside>
-
-					<aside class="widget">
-						<h3 class="heading">OFFICE LOCATIONS</h3>
-
-						<h5><em>Main Office</em></h5>
-						<p>1773 Tea Street <br /> Boston, MA 02114</p>
-						<h5><em>Philadelphia</em></h5>
-						<p>1776 Independence Blvd <br /> Philadelphia, PA 19107</p>
-					</aside>
 
 				</div> <!-- end sidebar -->
 			</div> <!-- end column -->
@@ -156,7 +140,7 @@
 
 	<!-- Footer
 	================================================== -->
-	<footer id="footer" class="wrapper with-overlap">
+<footer id="footer" class="wrapper with-overlap">
 
 		<div class="container-box">
 			<div class="container">
@@ -164,16 +148,14 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-wrapper">
-								<form class="form-inline">
+								<form action="//heidicarter.us12.list-manage.com/subscribe/post?u=78c02a78e776d40b08ddc7d8e&amp;id=7cf883fff5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
 									<h3>GET INVOLVED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
-										<input id="email" class="field-full-width" name="email" type="email" value="" required="required" placeholder="Email">
+										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_78c02a78e776d40b08ddc7d8e_7cf883fff5" tabindex="-1" value=""></div>
 									</div>
-									<div class="form-group">
-										<label class="sr-only" for="email">ZIP</label>
-										<input id="zip" class="field-half-width" name="text" type="text" value="" required="required" placeholder="ZIP">
-									</div>
+									
 									<button type="submit" class="btn btn-default">Update Me</button>
 								</form>
 							</div>
@@ -189,10 +171,9 @@
 				<div class="col-md-12">
 
 					<ul class="footer-social icon-blocks">
-						<li><a href="https://www.facebook.com/pages/Parallelus/197911100259679"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://twitter.com/parallelus"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="https://www.youtube.com/user/parallelusinc/"><i class="fa fa-youtube"></i></a></li>
+						<li><a href="https://www.facebook.com/heidicarterfordurhamcc"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+						
 					</ul>
 
 					<p><img src="assets/images/heidi_blue_big.png" width="476" height="32" alt="Heidi Carter for County Commissioner"></p>
