--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Heidi Carter for Durham County Commissioner</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
+	<link rel="stylesheet" href="assets/css/bootstrap.css" media="screen">
 	<link rel="stylesheet" href="assets/css/owl-carousel.css" media="screen">
 	<link rel="stylesheet" href="assets/css/heidi.css" media="screen">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
