--- a/404.html
+++ b/404.html
@@ -2,10 +2,11 @@
 <html lang="en" class="cover">
 <head>
 	<meta charset="utf-8">
-	<title>Page Not Found - 404 - Political HTML Template - FrontRunner</title>
+	<title>404 - Heidi Carter for County Commission</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
+	<link rel="stylesheet" href="assets/css/heidi.css" media="screen">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
