--- a/newsletter.html
+++ b/newsletter.html
@@ -2,10 +2,11 @@
 <html lang="en" class="cover">
 <head>
 	<meta charset="utf-8">
-	<title>Newsletter - Political HTML Template - FrontRunner</title>
+	<title>Newsletter - Heidi Carter for County Commissioner</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
+	<link rel="stylesheet" href="assets/css/heidi.min.css" media="screen">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -20,7 +21,7 @@
 	<div id="header">
 		<!-- Cover element
 		================================================== -->
-		<div class="cover-wrapper" style="background-image: url(assets/images/full-screen-bg-2.jpg)">
+		<div class="cover-wrapper" style="background-image: url(assets/images/newsletterbackground.png)">
 			<div class="cover-container"> <!-- add class 'overlay' for inner shadow -->
 				<div class="cover-inner">
 					<div id="newsletter" class="cover-right-content">
@@ -30,12 +31,12 @@
 
 									<div class="logo text-left">
 										<a href="index.html">
-											<img src="assets/images/logo-sm.png" width="280" height="60" alt="FrontRunner">
+											<img src="assets/images/logo.png" width="480" height="60" alt="FrontRunner">
 										</a>
 									</div>
 
 									<div class="intro-wrap">
-										<h1 class="text-left">True Leadership</h1>
+										<h1 class="text-left">Stay in the loop!</h1>
 										<p class="text-left">Be part of something real.</p>
 									</div>
 
@@ -45,32 +46,23 @@
 											<h3 class="text-left">GET INVOLVED!</h3>
 
 											<div class="form-wrapper">
-												<form>
-													<div class="row">
-														<div class="col-md-12">
-															<div class="form-group">
-																<label class="sr-only" for="email">Email address</label>
-																<input id="email" name="email" type="email" value="" required="required" placeholder="Email">
-															</div>
-														</div>
-														<div class="col-md-6">
-															<div class="form-group">
-																<label class="sr-only" for="zip">ZIP</label>
-																<input id="zip" name="zip" type="text" value="" required="required" placeholder="ZIP">
-															</div>
-														</div>
-														<div class="col-md-6">
-																<button type="submit" class="btn btn-default">UPDATE ME</button>
-														</div>
-													</div>
-												</form>
+												<form action="//heidicarter.us12.list-manage.com/subscribe/post?u=78c02a78e776d40b08ddc7d8e&amp;id=7cf883fff5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								
+									<div class="form-group">
+										<label class="sr-only" for="email">Email address</label>
+										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_78c02a78e776d40b08ddc7d8e_7cf883fff5" tabindex="-1" value=""></div>
+									</div>
+									
+									<button type="submit" class="btn btn-default">Update Me</button>
+								</form>
 											</div>
 
 										</div>
 									</div> <!-- end donate-wrapper -->
 
 									<div class="continue-link">
-										<a href="index.html">Continue to the site &nbsp; <i class="fa fa-arrow-circle-right"></i></a>
+										<a href="index.html" style="color: white;">Continue to the site &nbsp; <i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 
 								</div>
