--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 				<div class="color-hue"></div>
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-7">
 							<article>
-								<h3 style=" text-shadow: 2px 2px 3px rgba(0,0,0,1);">
+								<h3 style=" text-shadow: 2px 2px 3px rgba(0,0,0,1); font-weight: bold;">
 									<em>Ensure that economic development in Durham builds opportunity for all.</em><br>
 									
 								</h3>
@@ -274,11 +274,11 @@
 				<div class="color-hue"></div>
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-7">
 							<article>
-								<h3 style=" text-shadow: 2px 2px 3px rgba(0,0,0,1);">
+								<h3 style=" text-shadow: 2px 2px 3px rgba(0,0,0,1);font-weight: bold;">
 									
-								<em>Continue to build a culture of health in Durham</em>
+								<em>Guarantee outstanding educational opportunities for all.</em>
 								</h3>
 							</article>
 						</div>
@@ -290,10 +290,11 @@
 				<div class="color-hue"></div>
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-7">
 							<article>
-								<h3 style="margin-top: 20%; color:#fff;  text-shadow: 2px 2px 3px rgba(0,0,0,1);">
-									<em>Guarantee outstanding educational opportunities for all.</em>
+								<h3 style="color:#fff;  text-shadow: 2px 2px 3px rgba(0,0,0,1); font-weight: bold;">
+									<em>Continue to build a culture of health in Durham</em>
+
 								</h3>
 							</article>
 						</div>
