--- a/issues.html
+++ b/issues.html
@@ -72,8 +72,11 @@
 	<div class="main-content container">
 		<div class="row">
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-					<h2 class="heading" style="font-family: 'Rokkitt'; font-size: 60px; color: #246fa0; text-transform: none; text-shadow: 2px 2px 3px rgba(0,0,0,0.3); margin-bottom: 0;"> Heidi's Platform</h2>
-				</div>
+					<h2 class="heading" style="font-family: 'Rokkitt'; font-size: 60px; color: #246fa0; text-transform: none; text-shadow: 2px 2px 3px rgba(0,0,0,0.1); margin-bottom: 0;"> Heidi's Platform</h2>
+					<br>
+
+					<p>I am running for County Commissioner because I believe in the people and potential of Durham and want to help our county thrive.  On the cusp of Durham’s renaissance, our challenge is to invest our resources so that all of our people share in Durham’s continued prosperity. If elected, I will listen with an open heart and mind and will work hard to achieve the following:</p>
+			</div>
 			</div>
 <hr class="sep" />
 			<div class="row">
