--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 						<div class="col-sm-12">
 							<div class="form-wrapper">
 								<form action="//heidicarter.us12.list-manage.com/subscribe/post?u=78c02a78e776d40b08ddc7d8e&amp;id=7cf883fff5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-									<h3>GET INVOLVED!</h3>
+									<h3>GET CONNECTED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="EMAIL">Email address</label>
 										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
