--- a/newsletter.html
+++ b/newsletter.html
@@ -37,13 +37,13 @@
 
 									<div class="intro-wrap">
 										<h1 class="text-left">Stay in the loop!</h1>
-										<p class="text-left">Be part of something real.</p>
+										<p class="text-left">Sign up to receive campaign updates and reminders.</p>
 									</div>
 
 									<div class="box-wrapper">
 										<div class="box newsletter-box">
 
-											<h3 class="text-left">GET INVOLVED!</h3>
+											<h3 class="text-left">GET CONNECTED!</h3>
 
 											<div class="form-wrapper">
 												<form action="//heidicarter.us12.list-manage.com/subscribe/post?u=78c02a78e776d40b08ddc7d8e&amp;id=7cf883fff5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
