--- a/page-about.html
+++ b/page-about.html
@@ -100,7 +100,7 @@
 
 					<p><img src="assets/images/family.jpg" width="750" height="381" alt="Family photo"></p>
 
-					<p>Heidi Carter is a North Carolina native and has lived in Durham with her husband Scott for 36 years. Heidi graduated from Duke University in 1983 with a BS in Biology and went on to receive a Masters of Science in Medicinal Chemistry from UNC in 1984 and a Masters of Public Health from UNC Gillings School of Global Public Health in 2010. She has 4 grown children, all of whom are graduates of Durham Public Schools and are now working as a doctor, lawyer, physical therapist, and automotive technician. Heidi and Scott are the primary caretakers of their grand-dog, Peanut. Heidi is an avid runner and loves to cook (without a recipe), read, and bike.</p>
+					<p>Heidi Carter is a North Carolina native and has lived in Durham with her husband Scott for 36 years. Heidi graduated from Duke University in 1983 with a BS in Biology and went on to receive a Masters of Science in Medicinal Chemistry from UNC in 1984 and a Masters of Public Health from UNC Gillings School of Global Public Health in 2010. She has 4 grown children, all of whom are graduates of Durham Public Schools and are now working as a doctor, lawyer, physical therapist, and automotive technician. Heidi and Scott are the primary caretakers of their grand-dog, Peanut. Heidi is an avid runner and loves to cook, read, and bike.</p>
 
 					<p>Heidi is a 12-year member of Durham Public Schools’ Board of Education, serving as vice chair for 4 years and is the current Board Chair.  She is an active community member and has served on the following boards and committees:
 					
@@ -132,10 +132,10 @@
 					<aside class="widget">
 						<h3 class="heading" style="margin-top: 30px;">WE NEED YOUR VOTE!</h3>
 
-						<h5><em>Mark your calendar and don't forget to show your support.</em></h5>
+						<h5><em>Please mark your calendar to vote in the primary on March 15 and general election on Nov 8, 2016</em></h5>
 
 						<p><img src="assets/images/content-vote-date.png" width="263" height="218" alt="Save the Date!"></p>
-						<p class="small">We're getting closer every day so be sure to save the date. If you need help finding your voting location, check the directory of <a href="http://dconc.gov/government/departments-a-e/board-of-elections/polling-locations">precinct polling places</a> or contact your local Board of Elections for details.</p>
+						<p class="small">Make sure to take your driver's license! In 2016, you are required to show a government issued ID to vote.  If you need help finding your voting location, check the directory of <a href="http://dconc.gov/government/departments-a-e/board-of-elections/polling-locations">precinct polling places</a> or contact your local Board of Elections for details.</p>
 					</aside>
 
 					<aside class="widget">
@@ -187,7 +187,7 @@ http://dconc.gov/government/departments-a-e/board-of-elections/voter-registratio
 						<div class="col-sm-12">
 							<div class="form-wrapper">
 								<form class="form-inline">
-									<h3>GET INVOLVED!</h3>
+									<h3>GET CONNECTED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
 										<input id="email" class="field-full-width" name="email" type="email" value="" required="required" placeholder="Email">
