--- a/page-about.html
+++ b/page-about.html
@@ -132,7 +132,7 @@
 					<aside class="widget">
 						<h3 class="heading" style="margin-top: 30px;">WE NEED YOUR VOTE!</h3>
 
-						<h5><em>Please mark your calendar to vote in the primary on March 15 and general election on Nov 8, 2016</em></h5>
+						<h5><em>Please mark your calendar to vote in the primary on March 15, 2016</em></h5>
 
 						<p><img src="assets/images/content-vote-date.png" width="263" height="218" alt="Save the Date!"></p>
 						<p class="small">Make sure to take your driver's license! In 2016, you are required to show a government issued ID to vote.  If you need help finding your voting location, check the directory of <a href="http://dconc.gov/government/departments-a-e/board-of-elections/polling-locations">precinct polling places</a> or contact your local Board of Elections for details.</p>
