--- a/volunteer.html
+++ b/volunteer.html
@@ -122,19 +122,19 @@
 						<label for="Volunteering for" style= "font-size: 18px;">Volunteering to:</label>
 						<!-- Rounded TWO -->
  						<div class="checkbox checkbox-circle checkbox-primary">
-    					<input type="checkbox" id="checkbox1">
+    					<input type="checkbox" id="checkbox1" name="signs">
     						<label for="checkbox1" style= "font-size: 18px; line-height: 18px;">
         Put a sign in your yard.
     </label>
    </div>
    <div class="checkbox checkbox-circle checkbox-primary">
-    <input type="checkbox" id="checkbox1">
+    <input type="checkbox" id="checkbox2" name="pickup" >
     <label for="checkbox1" style= "font-size: 18px; line-height: 18px;">
         Pickup Campaign signs
     </label>
   </div>
     <div class="checkbox checkbox-circle checkbox-primary">
-    <input type="checkbox" id="checkbox1">
+    <input type="checkbox" id="checkbox3" name="party">
     <label for="checkbox1" style= "font-size: 18px; line-height: 18px;">
         Host an Event/Fundraiser
     </label>
