--- a/volunteer.html
+++ b/volunteer.html
@@ -117,6 +117,7 @@
 						</div>
 						
 						<input type="hidden" name="_subject" value="Volunteer" />
+						<input type="hidden" name="_cc" value="haleymelissacarter@gmail.com" />
 						<input type="hidden" name="_next" value="//heidicarter.com/thanks.html"> 
 						<div class="form-group">
 						<label for="Volunteering for" style= "font-size: 18px;">Volunteering to:</label>
