--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-					<blockquote class="big-quote" style="margin-top:0;">&ldquo;I love Durham, I believe in the people and potential of Durham, and I want to help our county thrive. As we continue to grow, we must make sure that Durham’s prosperity brings opportunity and <em>progress&nbsp;for&nbsp;all.</em>&rdquo;</blockquote>
+					<blockquote class="big-quote" style="margin-top:0;">&ldquo;Together, let's make 2020 the best decade ever in Durham for each of us and all of us!</em>&rdquo;</blockquote>
 					<p class="section-more text-center"><a href="page-about.html" class="btn btn-default">More About Heidi</a></p>
 				</div>
 			</div> <!-- end row -->
