--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 										<a class=""  href="page-about.html">About</a>	
 									</li>
 									<li class="">
-										<a href="issues.html">Platform</a>
+										<a href="accomplish.html">Accomplishments</a>
 									
 									</li>
 									<li class="">
