--- a/events.html
+++ b/events.html
@@ -40,14 +40,14 @@
 							<div class="collapse navbar-collapse" id="navbar-main">
 								<ul class="nav navbar-nav" id="nav-left">
 									<li class="">
-										<a href="index.html">Home</a>
+										<a href="index.html">Platform</a>
 										
 									</li>
 									<li class="">
 										<a class=""  href="page-about.html">About</a>	
 									</li>
 									<li class="">
-										<a href="issues.html">Platform</a>
+										<a href="accomplish.html">Accomplishments</a>
 									
 									</li>
 									<li class="">
