--- a/page-about.html
+++ b/page-about.html
@@ -64,7 +64,7 @@
 									</li>
 
 									<li class="">
-										<a href="issues.html">Accomplishments</a>
+										<a href="accomplish.html">Accomplishments</a>
 									
 									</li>
 									<li class="">
