--- a/accomplish.html
+++ b/accomplish.html
@@ -75,7 +75,7 @@
 					<h2 class="heading" style="font-family: 'Rokkitt'; font-size: 60px; color: #246fa0; text-transform: none; text-shadow: 2px 2px 3px rgba(0,0,0,0.1); margin-bottom: 0;"> Heidi's Record of Accomplishments</h2>
 					<br>
 
-					<p style= "margin-bottom: 0;">Heidi's two <span style="font-weight: bold;">topmost guiding principles for decision-making are racial equity and environmental sustainability in three interlocked areas:  health, education and economic security.</span>  She works hard on complex social challenges in these three areas every day, and you can count on her for the following: 
+					<p style= "margin-bottom: 0;">Heidi's two <span style="font-weight: bold;">topmost guiding principles for decision-making are racial equity and environmental sustainability in three interlocked areas:  health, education and economic security.</span>  She works hard on the complex social challenges in these three areas every day, and the County is making progress. 
 
 </p>
 			</div>
