green new decade

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-					<blockquote class="big-quote" style="margin-top:0;">&ldquo;Together, let's make 2020 the best decade ever in Durham for each of us and all of us!</em>&rdquo;</blockquote>
+					<blockquote class="big-quote" style="margin-top:0;">&ldquo;As we enter 2020, let's build a green new decade with broadly shared prosperity for all.</em>&rdquo;</blockquote>
 					<p class="section-more text-center"><a href="page-about.html" class="btn btn-default">More About Heidi</a></p>
 				</div>
 			</div> <!-- end row -->
