--- a/page-about.html
+++ b/page-about.html
@@ -119,7 +119,7 @@
 						<h5><em>Please mark your calendar to vote in the primary on March 3, 2020</em></h5>
 
 						
-						<p class="small">Make sure to take your driver's license! In 2020, you are required to show a government issued ID to vote.  If you need help finding your voting location, check the directory of <a href="http://www.dcovotes.com/voters/voting/polling-locations">precinct polling places</a> or contact your local Board of Elections for details.</p>
+						<p class="small"> If you need help finding your voting location, check the directory of <a href="http://www.dcovotes.com/voters/voting/polling-locations">precinct polling places</a> or contact your local Board of Elections for details.</p>
 					</aside>
 
 					<aside class="widget">
