endoresements and questionaires

--- a/endorsements.html
+++ b/endorsements.html
@@ -76,7 +76,7 @@
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
 
 					<header class="page-header">
-						<h1 class="page-title">News &amp; Headlines</h1>
+						<h1 class="page-title">Endorsements</h1>
 					</header>
 
 					<article class="post sticky">
