--- a/volunteer.html
+++ b/volunteer.html
@@ -194,8 +194,8 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-wrapper">
-								<form action="//heidicarter.us12.list-manage.com/subscribe/post?u=78c02a78e776d40b08ddc7d8e&amp;id=7cf883fff5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-									<h3>GET CONNECTED!</h3>
+								<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+										<h3>GET CONNECTED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
 										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
@@ -218,8 +218,7 @@
 
 					<ul class="footer-social icon-blocks">
 						<li><a href="https://www.facebook.com/heidifordurhamcc"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-						
+				
 					</ul>
 
 					<p><img src="assets/images/heidi_blue_big.png" width="476" height="32" alt="Heidi Carter for County Commissioner"></p>
