fix mailchimp again

--- a/newsletter.html
+++ b/newsletter.html
@@ -46,7 +46,7 @@
 											<h3 class="text-left">GET CONNECTED!</h3>
 
 											<div class="form-wrapper">
-												<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+												<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
 										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
