--- a/volunteer.html
+++ b/volunteer.html
@@ -194,7 +194,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-wrapper">
-								<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
 										<h3>GET CONNECTED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
