--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 <html lang="en" class="cover">
 <head>
 	<meta charset="utf-8">
-	<title>Donations - Heidi Carter for County Commission</title>
+	<title>Contribute - Heidi Carter for County Commission</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
