--- a/donate.html
+++ b/donate.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Contribute - Heidi Carter for County Commission</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="PA Endorses Heidi Carter" />
+	<meta property="og:title" content="Contribute Today" />
 	<link rel="stylesheet" href="assets/css/imports.css" media="screen">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
 	<link rel="stylesheet" href="assets/css/heidi.css" media="screen">
