--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<ul class="nav navbar-nav" id="nav-right">
-									<li><a href="donate.html">Donate</a></li>
+									<li><a href="donate.html">Contribute</a></li>
 								</ul>
 							
 							</div>
