--- a/thanks.html
+++ b/thanks.html
@@ -54,7 +54,7 @@
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<ul class="nav navbar-nav" id="nav-right">
-									<li><a href="donate.html">Donate</a></li>
+									<li><a href="donate.html">Contribute</a></li>
 								</ul>
 							
 							</div>
@@ -103,7 +103,7 @@
 
 						<h5><em>Help us fund the effort.</em></h5>
 						<p>Your contributions are what make all this possible. Every donation helps so don't wait!</p>
-						<a href="/donate.html" class="small">Donate Now!</a>
+						<a href="/donate.html" class="small">Contribute Now!</a>
 					</aside>
 
 
