--- a/page-about.html
+++ b/page-about.html
@@ -75,7 +75,7 @@
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<ul class="nav navbar-nav" id="nav-right">
-									<li><a href="donate.html">Donate</a></li>
+									<li><a href="donate.html">Contribute</a></li>
 								</ul>
 							
 							</div>
@@ -169,16 +169,14 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-wrapper">
-								<form class="form-inline">
-									<h3>GET CONNECTED!</h3>
+								<form action="https://heidicarter.us4.list-manage.com/subscribe/post?u=8d30fdbe8a1ef1a00a46ca84c&amp;id=ef5c2f17d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+										<h3>GET CONNECTED!</h3>
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
-										<input id="email" class="field-full-width" name="email" type="email" value="" required="required" placeholder="Email">
+										<input id="mce-EMAIL" class="field-full-width email form-control" name="EMAIL" type="email" value="" required="required" placeholder="Email Address">
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_78c02a78e776d40b08ddc7d8e_7cf883fff5" tabindex="-1" value=""></div>
 									</div>
-									<div class="form-group">
-										<label class="sr-only" for="email">ZIP</label>
-										<input id="zip" class="field-half-width" name="text" type="text" value="" required="required" placeholder="ZIP">
-									</div>
+									
 									<button type="submit" class="btn btn-default">Update Me</button>
 								</form>
 							</div>
