--- a/page.html
+++ b/page.html
@@ -97,7 +97,7 @@
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown">Landing Pages</a>
 												<ul class="dropdown-menu">
 													<li><a href="newsletter.html">Newsletter</a></li>
-													<li><a href="donate.html">Donate</a></li>
+													<li><a href="donate.html">Contribute</a></li>
 												</ul>
 											</li>
 											<li><a href="page-features.html">Features</a></li>
@@ -106,7 +106,7 @@
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<ul class="nav navbar-nav" id="nav-right">
-									<li><a href="donate.html">Donate</a></li>
+									<li><a href="donate.html">Contribute</a></li>
 								</ul>
 							</div>
 					</div>
