more donate --> contribute

--- a/videos.html
+++ b/videos.html
@@ -372,7 +372,7 @@
 							<li><a href="blog.html">News</a></li>
 							<li><a href="events.html">Events</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="donate.html"><strong class="text-danger">Donate</strong></a></li>
+							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
 					</div>
 
