--- a/endorsements.html
+++ b/endorsements.html
@@ -161,7 +161,7 @@ is willing to take bold action to support students and educators in this importa
 						
 							<li><a href="events.html">Events</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="donate.html"><strong class="text-danger">Donate</strong></a></li>
+							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
 					</div>
 
