--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 							<li><a href="issues.html">On the Issues</a></li>
 							<li><a href="events.html">Events</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="donate.html"><strong class="text-danger">Donate</strong></a></li>
+							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
 					</div>
 
