--- a/donate.html
+++ b/donate.html
@@ -45,7 +45,7 @@
 									<div class="box-wrapper">
 										<div class="box accent-box">
 
-											<h3 class="text-left">DONATE TO THE CAMPAIGN</h3>
+											<h3 class="text-left">CONTRIBUTE TO THE CAMPAIGN</h3>
 
 											<iframe src="https://donorbox.org/embed/heidi-carter-for-cc" height="1065px" width="100%" style="min-width:310px" seamless="seamless" name="donorbox" frameborder="0" scrolling="no"></iframe>
 										</div>
