--- a/volunteer.html
+++ b/volunteer.html
@@ -125,7 +125,13 @@
  						<div class="checkbox checkbox-circle checkbox-primary">
     					<input type="checkbox" id="checkbox1" name="signs">
     						<label for="checkbox1" style= "font-size: 18px; line-height: 18px;">
-        Put a sign in your yard.
+        Put a sign in your yard
+    </label>
+   </div>
+   <div class="checkbox checkbox-circle checkbox-primary">
+    					<input type="checkbox" id="checkbox1" name="polls">
+    						<label for="checkbox1" style= "font-size: 18px; line-height: 18px;">
+        Work the Polls
     </label>
    </div>
    <div class="checkbox checkbox-circle checkbox-primary">
