--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									
 									</li>
 									<li class="">
-										<a class=""  href="events.html">Events</a>	
+										<a class=""  href="espanol.html">En Espa&ntilde;ol</a>	
 									</li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
@@ -353,7 +353,7 @@
 	</div> 
 
 
-	<!--  Events
+	<!--  En Espa&ntilde;ol
 	================================================== -->
 	<!-- <div id="section-events" class="wrapper">
 
@@ -361,7 +361,7 @@
 
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-					<h2 class="heading">Campaign Events</h2>
+					<h2 class="heading">Campaign En Espa&ntilde;ol</h2>
 				</div>  
 
 				<div class="row">
@@ -417,7 +417,7 @@
 						</li>
 					</ul>
 
-					<p class="section-more timeline-more"><a href="events.html" class="btn btn-default"><i class="fa fa-2x fa-plus visible-xs-inline visible-sm-inline"></i><span class="visible-md-inline visible-lg-inline">More Events</span></a></p>
+					<p class="section-more timeline-more"><a href="espanol.html" class="btn btn-default"><i class="fa fa-2x fa-plus visible-xs-inline visible-sm-inline"></i><span class="visible-md-inline visible-lg-inline">More En Espa&ntilde;ol</span></a></p>
 	-->
 
 	<footer id="footer" class="wrapper with-overlap">
@@ -462,7 +462,7 @@
 						<ul>
 							<li><a href="page-about.html">About Heidi</a></li>
 							<li><a href="issues.html">On the Issues</a></li>
-							<li><a href="events.html">Events</a></li>
+							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
