--- a/single-sidebar-right.html
+++ b/single-sidebar-right.html
@@ -55,7 +55,7 @@
 										<li><a href="blog.html">News</a></li>
 										<li><a href="blog-with-images.html">News (alternate)</a></li>
 										<li><a href="videos.html">Videos</a></li>
-										<li><a href="events.html">Events</a></li>
+										<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 									</ul>
 								</li>
 								<li class="dropdown show-on-hover">
@@ -241,7 +241,7 @@
 							<li><a href="page-about.html">About Tim</a></li>
 							<li><a href="issues.html">On the Issues</a></li>
 							<li><a href="blog.html">News</a></li>
-							<li><a href="events.html">Events</a></li>
+							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
