--- a/elements.html
+++ b/elements.html
@@ -55,7 +55,7 @@
 											<li><a href="blog.html">News</a></li>
 											<li><a href="blog-with-images.html">News (alternate)</a></li>
 											<li><a href="videos.html">Videos</a></li>
-											<li><a href="events.html">Events</a></li>
+											<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 										</ul>
 									</li>
 									<li class="dropdown show-on-hover">
