--- a/home-alt.html
+++ b/home-alt.html
@@ -74,7 +74,7 @@
 											<li><a href="blog.html">News</a></li>
 											<li><a href="blog-with-images.html">News (alternate)</a></li>
 											<li><a href="videos.html">Videos</a></li>
-											<li><a href="events.html">Events</a></li>
+											<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 										</ul>
 									</li>
 									<li class="dropdown show-on-hover">
@@ -403,7 +403,7 @@
 	</div> <!-- end featured-slider -->
 
 
-	<!-- Events
+	<!-- En Espa&ntilde;ol
 	================================================== -->
 	<div id="section-events" class="wrapper">
 
@@ -411,7 +411,7 @@
 
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-					<h2 class="heading">Campaign Events</h2>
+					<h2 class="heading">Campaign En Espa&ntilde;ol</h2>
 				</div>  <!-- end column -->
 			</div>  <!-- end row -->
 
@@ -468,7 +468,7 @@
 						</li>
 					</ul>
 
-					<p class="section-more timeline-more"><a href="events.html" class="btn btn-default"><i class="fa fa-2x fa-plus visible-xs-inline visible-sm-inline"></i><span class="visible-md-inline visible-lg-inline">More Events</span></a></p>
+					<p class="section-more timeline-more"><a href="espanol.html" class="btn btn-default"><i class="fa fa-2x fa-plus visible-xs-inline visible-sm-inline"></i><span class="visible-md-inline visible-lg-inline">More En Espa&ntilde;ol</span></a></p>
 				</div>  <!-- end column -->
 			</div>  <!-- end row -->
 
@@ -524,7 +524,7 @@
 							<li><a href="page-about.html">About Tim</a></li>
 							<li><a href="issues.html">On the Issues</a></li>
 							<li><a href="blog.html">News</a></li>
-							<li><a href="events.html">Events</a></li>
+							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
