--- a/thanks.html
+++ b/thanks.html
@@ -45,7 +45,7 @@
 									
 									</li>
 									<li class="">
-										<a href="events.html" >Events</a>
+										<a href="espanol.html" >En Espa&ntilde;ol</a>
 									
 									</li>
 									<li class="">
@@ -162,7 +162,7 @@
 							<li><a href="page-about.html">About Heidi</a></li>
 							<li><a href="issues.html">On the Issues</a></li>
 							<li><a href="blog.html">News</a></li>
-							<li><a href="events.html">Events</a></li>
+							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
 						</ul>
