--- a/contact.html
+++ b/contact.html
@@ -182,8 +182,7 @@
 					<div class="footer-nav">
 						<ul>
 							<li><a href="page-about.html">About Heidi</a></li>
-							<li><a href="issues.html">On the Issues</a></li>
-					
+							<li><a href="accomplish.html">Accomplishments</a></li>					
 							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
@@ -195,7 +194,7 @@
 					</div>
 
 					<div class="copyright">
-						<p>&copy; Heidi Carter 2016<br>3 Barkridge Ct, Durham, NC 27713</p>
+						<p>&copy; Heidi Carter 2020<br>3 Barkridge Ct, Durham, NC 27713</p>
 					</div>
 
 				</div>
