--- a/page-about.html
+++ b/page-about.html
@@ -202,8 +202,7 @@
 					<div class="footer-nav">
 						<ul>
 							<li><a href="page-about.html">About Heidi</a></li>
-							<li><a href="issues.html">On the Issues</a></li>
-						
+							<li><a href="accomplish.html">Accomplishments</a></li>
 							<li><a href="espanol.html">En Espa&ntilde;ol</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="donate.html"><strong class="text-danger">Contribute</strong></a></li>
